# persian-asr-gradio

./: README.md  pyproject.toml
persian_asr/: __init__.py  __main__.py  app.py  asr.py  decorators.py  nlp.py  vad.py
tests/: test_asr.py  test_nlp.py
